--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,20 @@
     <title>GlobalPad - Simple and Secure File Sharing</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
+        * {
             margin: 0;
-            padding: 2rem;
-            background: #f5f5f5;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Inter', sans-serif;
+        }
+
+        body {
+            background: #f5f7fb;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
+            padding: 2rem;
         }
 
         .logo {
@@ -26,8 +31,11 @@
             align-items: center;
             justify-content: center;
             margin-bottom: 1rem;
-            font-size: 2rem;
+        }
+
+        .logo span {
             color: white;
+            font-size: 2rem;
             font-weight: 600;
         }
 
@@ -76,7 +84,6 @@
             border-radius: 8px;
             outline: none;
             transition: border-color 0.2s;
-            margin-bottom: 10px;
         }
 
         input:focus {
@@ -91,27 +98,11 @@
             font-size: 1rem;
             border-radius: 8px;
             cursor: pointer;
-            transition: all 0.2s;
-            text-decoration: none;
-            display: inline-block;
+            transition: background 0.2s;
         }
 
         .btn:hover {
             background: #1557b0;
-            transform: translateY(-1px);
-        }
-
-        .btn:active {
-            transform: translateY(0);
-        }
-
-        .btn-secondary {
-            background: #e1e1e1;
-            color: #333;
-        }
-
-        .btn-secondary:hover {
-            background: #d1d1d1;
         }
 
         .note {
@@ -120,6 +111,7 @@
             margin-top: 1rem;
         }
 
+        /* Editor styles */
         .editor-container {
             display: none;
             width: 100%;
@@ -138,8 +130,6 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            flex-wrap: wrap;
-            gap: 1rem;
         }
 
         .editor-content {
@@ -154,12 +144,6 @@
             border-radius: 8px;
             font-size: 1rem;
             resize: vertical;
-            line-height: 1.5;
-        }
-
-        textarea:focus {
-            border-color: #1a73e8;
-            outline: none;
         }
 
         .file-upload {
@@ -168,12 +152,6 @@
             border: 2px dashed #e1e1e1;
             border-radius: 8px;
             text-align: center;
-            transition: all 0.2s;
-        }
-
-        .file-upload:hover {
-            border-color: #1a73e8;
-            background: rgba(26, 115, 232, 0.05);
         }
 
         .file-list {
@@ -184,21 +162,24 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 1rem;
+            padding: 0.5rem;
             background: #f8f9fa;
-            border-radius: 8px;
+            border-radius: 4px;
             margin-bottom: 0.5rem;
-            transition: all 0.2s;
-        }
-
-        .file-item:hover {
-            background: #f0f0f0;
         }
 
         .button-group {
             display: flex;
             gap: 0.5rem;
-            flex-wrap: wrap;
+        }
+
+        .btn-secondary {
+            background: #e1e1e1;
+            color: #333;
+        }
+
+        .btn-secondary:hover {
+            background: #d1d1d1;
         }
 
         .status {
@@ -210,170 +191,125 @@
             background: #4caf50;
             color: white;
             display: none;
-            z-index: 9999;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
 
-        /* Pad Lock Styles */
-        .pad-lock-container {
-            margin: 15px 0;
-            padding: 15px;
-            background: rgba(26, 115, 232, 0.1);
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            flex-wrap: wrap;
+        .blur-content {
+            filter: blur(5px);
+            pointer-events: none;
+            user-select: none;
         }
 
-        .pad-lock-toggle {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            min-width: 200px;
-        }
-
-        .pad-lock-icon {
-            font-size: 1.2em;
-            color: #1a73e8;
-        }
-
-        .pad-lock-text {
-            color: #1a73e8;
-            font-weight: 500;
-        }
-
-        .switch {
-            position: relative;
-            display: inline-block;
-            width: 60px;
-            height: 34px;
-            flex-shrink: 0;
-        }
-
-        .switch input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
-
-        .slider {
+        .private-overlay {
             position: absolute;
-            cursor: pointer;
             top: 0;
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #ccc;
-            transition: .4s;
-            border-radius: 34px;
+            background: rgba(255, 255, 255, 0.9);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 10;
         }
 
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 26px;
-            width: 26px;
-            left: 4px;
-            bottom: 4px;
-            background-color: white;
-            transition: .4s;
-            border-radius: 50%;
+        .private-access {
+            background: white;
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 400px;
+            width: 90%;
         }
 
-        input:checked + .slider {
-            background-color: #1a73e8;
+        .private-toggle {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            margin: 1rem 0;
         }
 
-        input:checked + .slider:before {
-            transform: translateX(26px);
-        }
-
-        .pad-lock-input {
+        .private-code-input {
             display: none;
-            padding: 10px;
-            background: rgba(26, 115, 232, 0.05);
-            border-radius: 6px;
-            flex-grow: 1;
-            min-width: 250px;
+            margin-top: 1rem;
         }
 
-        .pad-lock-hint {
-            color: #1a73e8;
-            font-style: italic;
-            font-size: 0.9em;
-            margin-top: 5px;
+        .private-code-input.show {
+            display: block;
         }
 
-        .locked-overlay {
+        .locked-item {
+            position: relative;
+        }
+
+        .lock-icon {
+            position: absolute;
+            right: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 1.2rem;
+            color: #666;
+        }
+
+        .modal {
             position: fixed;
             top: 0;
             left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.85);
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
             z-index: 1000;
         }
 
-        .locked-content {
-            max-width: 500px;
-            padding: 30px;
-            text-align: center;
-            color: white;
-            background: rgba(255, 255, 255, 0.1);
+        .modal-content {
+            background: white;
+            padding: 2rem;
             border-radius: 12px;
-            backdrop-filter: blur(10px);
+            width: 90%;
+            max-width: 400px;
+            text-align: center;
         }
 
-        .encrypted-background {
+        .blurred-content {
+            filter: blur(5px);
+            position: relative;
+        }
+
+        .locked-overlay {
             position: absolute;
             top: 0;
             left: 0;
-            right: 0;
-            bottom: 0;
-            z-index: -1;
-            opacity: 0.1;
-            font-family: monospace;
-            font-size: 12px;
-            overflow: hidden;
-            white-space: pre-wrap;
-            color: #1a73e8;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.9);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 10;
         }
 
-        @media (max-width: 600px) {
-            body {
-                padding: 1rem;
-            }
+        .locked-message {
+            background: white;
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
 
-            .container {
-                padding: 1.5rem;
-            }
-
-            .editor-container {
-                margin-top: 1rem;
-            }
-
-            .editor-header {
-                flex-direction: column;
-                align-items: stretch;
-            }
-
-            .button-group {
-                justify-content: stretch;
-            }
-
-            .btn {
-                width: 100%;
-            }
+        .lock-icon {
+            font-size: 1.5rem;
+            margin-bottom: 0.5rem;
         }
     </style>
   </head>
   <body>
-    <div class="logo">GP</div>
+    <div class="logo">
+        <span>GP</span>
+    </div>
     <h1>GlobalPad</h1>
     <p class="subtitle">Simple and secure file sharing</p>
 
@@ -381,7 +317,8 @@
         <h2 class="access-title">Access Your Notes</h2>
         <p class="access-subtitle">Enter an access code to manage your notes and files</p>
         <div class="input-group">
-            <input type="text" id="access-code" placeholder="Enter access code" autofocus>
+            <input type="text" id="access-code" placeholder="Enter access code">
+            <input type="password" id="private-access-code" placeholder="Enter private code (optional)" style="margin-top: 10px;">
         </div>
         <button class="btn" id="open-btn">Open</button>
         <p class="note">Use any code you want. Just remember it to access your notes later!</p>
@@ -389,36 +326,37 @@
 
     <div class="editor-container" id="editor-container">
         <div class="editor-header">
-            <div class="pad-lock-container">
-                <div class="pad-lock-toggle">
-                    <span class="pad-lock-icon">🔒</span>
-                    <span class="pad-lock-text">Pad Lock</span>
-                    <label class="switch">
-                        <input type="checkbox" id="padLockToggle">
-                        <span class="slider"></span>
-                    </label>
-                </div>
-                <div id="padLockInput" class="pad-lock-input">
-                    <input type="password" id="padLockCode" placeholder="Enter pad lock code">
-                    <div class="pad-lock-hint">Lock this note with a second code for extra security</div>
-                </div>
-            </div>
+            <div class="status-text">Your code is in use</div>
             <div class="button-group">
                 <button class="btn btn-secondary" id="save-btn">Save</button>
                 <button class="btn btn-secondary" id="refresh-btn">Refresh</button>
+                <button class="btn btn-secondary" id="private-btn">Save as Private</button>
                 <button class="btn" id="save-close-btn">Save & Close</button>
                 <button class="btn btn-secondary" id="close-btn">Close</button>
             </div>
         </div>
         <div class="editor-content">
-            <textarea id="note-content" placeholder="Start typing your notes here..."></textarea>
-            <div class="file-upload">
-                <input type="file" id="file-input" style="display: none;">
-                <button class="btn" id="upload-btn">Upload Files</button>
-                <p class="note">Supported files: PDF, DOC, PPT, Images (Max size: 10MB)</p>
+            <div id="private-modal" class="modal" style="display: none;">
+                <div class="modal-content">
+                    <h3>Set Private Access</h3>
+                    <p>Enter a private code to protect your content</p>
+                    <input type="password" id="private-code" placeholder="Enter private code">
+                    <div class="button-group" style="margin-top: 15px;">
+                        <button class="btn" id="confirm-private">Confirm</button>
+                        <button class="btn btn-secondary" id="cancel-private">Cancel</button>
+                    </div>
+                </div>
             </div>
-            <div class="file-list" id="file-list">
-                <!-- Files will be listed here -->
+            <div id="content-wrapper">
+                <textarea id="note-content" placeholder="Start typing your notes here..."></textarea>
+                <div class="file-upload">
+                    <input type="file" id="file-input" accept=".pdf,.doc,.docx,.ppt,.pptx,.txt,.jpg,.jpeg,.png" style="display: none">
+                    <button class="btn" id="upload-btn">Upload Files</button>
+                    <p class="note">Supported files: PDF, DOC, PPT, Images (Max size: 10MB)</p>
+                </div>
+                <div class="file-list" id="file-list">
+                    <!-- Files will be listed here -->
+                </div>
             </div>
         </div>
     </div>
@@ -440,11 +378,13 @@
         const uploadBtn = document.getElementById('upload-btn');
         const fileList = document.getElementById('file-list');
         const statusMessage = document.getElementById('status-message');
-        const padLockToggle = document.getElementById('padLockToggle');
-        const padLockInput = document.getElementById('padLockInput');
-        const padLockCode = document.getElementById('padLockCode');
-        let isPadLocked = false;
-        let currentPadLockCode = '';
+        const privateBtn = document.getElementById('private-btn');
+        const privateModal = document.getElementById('private-modal');
+        const confirmPrivateBtn = document.getElementById('confirm-private');
+        const cancelPrivateBtn = document.getElementById('cancel-private');
+        const privateAccessCode = document.getElementById('private-access-code');
+        let isPrivate = false;
+        let currentPrivateCode = '';
 
         // Show status message
         function showStatus(message, isError = false) {
@@ -473,8 +413,8 @@
             const formData = new FormData();
             formData.append('file', file);
             formData.append('userId', accessCode.value);
-            formData.append('isPadLocked', isPadLocked);
-            formData.append('padLockCode', currentPadLockCode);
+            formData.append('isPrivate', isPrivate);
+            formData.append('privateCode', currentPrivateCode);
 
             try {
                 const response = await fetch('/api/upload', {
@@ -493,7 +433,7 @@
         // Load files
         async function loadFiles() {
             try {
-                const response = await fetch(`/api/files/user/${accessCode.value}?padLockCode=${currentPadLockCode || ''}`);
+                const response = await fetch(`/api/files/user/${accessCode.value}?privateCode=${privateAccessCode.value || ''}`);
                 const files = await response.json();
 
                 fileList.innerHTML = files.map(file => {
@@ -528,7 +468,7 @@
 
         // Download file
         async function downloadFile(fileId) {
-            window.open(`/api/download/${fileId}?padLockCode=${currentPadLockCode || ''}`);
+            window.open(`/api/download/${fileId}?privateCode=${privateAccessCode.value || ''}`);
         }
 
         // Delete file
@@ -554,7 +494,7 @@
         // Load note
         async function loadNote() {
             try {
-                const response = await fetch(`/api/notes/user/${accessCode.value}?padLockCode=${currentPadLockCode || ''}`);
+                const response = await fetch(`/api/notes/user/${accessCode.value}?privateCode=${privateAccessCode.value || ''}`);
                 const notes = await response.json();
                 
                 if (notes.length > 0) {
@@ -582,22 +522,28 @@
             }
         }
 
-        // Show pad lock input
-        padLockToggle.addEventListener('click', () => {
-            padLockInput.style.display = padLockInput.style.display === 'none' ? 'block' : 'none';
+        // Show private modal
+        privateBtn.addEventListener('click', () => {
+            privateModal.style.display = 'flex';
         });
 
-        // Handle pad lock code confirmation
-        padLockCode.addEventListener('input', () => {
-            const code = padLockCode.value;
+        // Handle private code confirmation
+        confirmPrivateBtn.addEventListener('click', () => {
+            const code = document.getElementById('private-code').value;
             if (code) {
-                currentPadLockCode = code;
-                isPadLocked = true;
-                padLockInput.style.display = 'none';
-                showStatus('Pad lock enabled');
+                currentPrivateCode = code;
+                isPrivate = true;
+                privateModal.style.display = 'none';
+                showStatus('Private access enabled');
             } else {
-                showStatus('Please enter a pad lock code', true);
+                showStatus('Please enter a private code', true);
             }
+        });
+
+        // Handle private modal cancellation
+        cancelPrivateBtn.addEventListener('click', () => {
+            privateModal.style.display = 'none';
+            document.getElementById('private-code').value = '';
         });
 
         // Modified save note function
@@ -611,8 +557,8 @@
                     body: JSON.stringify({
                         userId: accessCode.value,
                         content: noteContent.value,
-                        isPadLocked: isPadLocked,
-                        padLockCode: currentPadLockCode
+                        isPrivate: isPrivate,
+                        privateCode: currentPrivateCode
                     })
                 });
 
@@ -646,16 +592,16 @@
             await saveNote();
             showStatus('Saved successfully');
             setTimeout(() => {
-                isPadLocked = false;
-                currentPadLockCode = '';
+                isPrivate = false;
+                currentPrivateCode = '';
                 accessContainer.style.display = 'block';
                 editorContainer.style.display = 'none';
             }, 1000);
         });
 
         closeBtn.addEventListener('click', () => {
-            isPadLocked = false;
-            currentPadLockCode = '';
+            isPrivate = false;
+            currentPrivateCode = '';
             accessContainer.style.display = 'block';
             editorContainer.style.display = 'none';
         });
